use 80 percent coverage

--- a/writing/sections/methods.Rmd
+++ b/writing/sections/methods.Rmd
@@ -30,7 +30,7 @@ theme_set(theme_bw())
 
 ## Bird abundance data
 
-We used data from the Breeding Bird Survey [@sauer2013] to evaluate trends in abundance, biomass, and energy use. BBS (BBS methods background). We explored trends in abundance, biomass, and energy use over the 30-year time period from 1988-2018. We selected these years to provide a temporal window sufficient to detect trends (@cusser2020), while allowing for a substantial number of routes. To avoid irregularities caused by missing time steps, we restricted the main analysis to routes that had been sampled every year from 1988-2018 (n = 350), and compared these results to a more inclusive selection of routes that were sampled in at least 25 of 30 years in this window (n >1000).  We take the route to be the "community" scale [@thibault2011; others]. We filtered the data to remove taxa that are poorly sampled through these methods, following (literally everyone). We accessed the data, and performed this preliminary cleaning and filtering, using the R package `MATSS` [@ye2020]. 
+We used data from the Breeding Bird Survey [@sauer2013] to evaluate trends in abundance, biomass, and energy use. BBS (BBS methods background). We explored trends in abundance, biomass, and energy use over the 30-year time period from 1989-2018. We selected these years to provide a temporal window sufficient to detect trends (@cusser2020), while allowing for a substantial number of routes. To avoid irregularities caused by missing time steps, we restricted the main analysis to routes that had been in at least 27 of 30 years in this window (n = 739), and compared these results to a more strict selection of routes that were sampled in every year (n = 199). We take the route to be the "community" scale [@thibault2011; others]. We filtered the data to remove taxa that are poorly sampled through these methods, following (literally everyone). We accessed the data, and performed this preliminary cleaning and filtering, using the R package `MATSS` [@ye2020]. 
 
 ##  Estimated size data
 
