--- a/writing/sections/methods.Rmd
+++ b/writing/sections/methods.Rmd
@@ -38,13 +38,17 @@ BBS contains abundances for all species along a route in each year, but does not
 
 ## Comparing abundance- and size- based currencies
 
-Comparing trends across different currencies is a nontrivial statistical challenge. Because different currencies vary widely in their units of measure (e.g. abundance in the hundreds of individuals; total biomass in the thousands of grams), it is challenging to interpret differences in magnitude of slope across different currencies. Transformation and scaling using common approaches (such as a square-root transform or rescaling each currency to a mean of 0 and a standard deviation of 1; @gotelli2017; @dornelas2014) destroys information about the degree of variability within each currency. 
+Comparing trends across different currencies is a nontrivial statistical challenge. Because different currencies vary widely in their units of measure (e.g. abundance in the hundreds of individuals; total biomass in the thousands of grams), it is challenging to interpret differences in magnitude of slope across different currencies. Transformation and scaling using common approaches (such as a square-root transform or rescaling each currency to a mean of 0 and a standard deviation of 1; @gotelli2017; @dornelas2014) destroys necessary information about the degree of variability within each currency. 
 
-Rather than attempting to compare slopes across currencies or to transform different currencies to a common scale, I use a simple null model to compare the observed dynamics for biomass and energy use to the dynamics that would occur in a scenario in which the species (and therefore size) composition of the community was consistent throughout the timeseries, but in which total abundance varied over time consistent with the observed dynamics. For each route, we characterized the "observed" timeseries of total biomass and total energy use by simulating size measurements for all individuals observed in each time step and summing across individuals, using the method described above. We then created simulated timeseries for biomass and energy use by re-assigning the species identities of individuals based on each species' mean relative abundance throughout the timeseries. For each time step, we calculated the relative abundance for each species. For each species, we then took the mean relative abundance over all time steps. We used the distribution of species' mean relative abundances as the weights for a multinomial distribution describing the probability than an individual drawn at random from the community is of a particular species. For every timestep, we assigned species identities to individuals by sampling the observed number of individuals from this timeseries-wide multinomial distribution. We then simulated body size measurements for individuals, and calculated total energy use and total biomass, following the same procedure as for the observed community. This estimates the dynamics for size-based currencies expected if the species (and size) composition of the community does not change over time, but incorporating observed fluctuations in total abundance. 
+Rather than attempting to compare slopes across currencies or to transform different currencies to a common scale, we use a simple null model to compare the observed dynamics for biomass and energy use to the dynamics that would occur in a scenario in which the species (and therefore, in this context, size) composition of the community was consistent throughout the timeseries, but in which total abundance varied over time consistent with the observed dynamics. For each route, we characterized the "observed" timeseries of total biomass and total energy use by simulating size measurements for all individuals observed in each time step and summing across individuals, using the method described above. We then created simulated timeseries for biomass and energy use incorporating observed changes in community-wide abundance over time, but under a scenario of consistent species (and therefore size) composition over time. For each community, we characterized the timeseries-wide probability of an individual drawn at random from the community belonging to a particular species ($P(s_i)$) as each species' mean relative abundance taken across all timesteps: 
+
+$P(s_i) = \frac{\sum_t^T{\frac{n_{i, t}}{N_t}}}{T}$
+
+where $n_{i, t}$ is the abundance of species $i$ in timestep $t$, $N_t$ is the total abundance of all species in timestep $t$, and $T$ is the total number of timesteps. For each timestep $t$, we randomly assigned species' identities to the observed number of individuals $N_t$ by drawing with replacement from a multinomial distribution with probabilities weighted according to $P(s)$ for all species. We then simulated body size measurements for individuals, and calculated total energy use and total biomass, following the same procedure as for the observed community. This estimates the dynamics for size-based currencies expected if the species (and size) composition of the community does not change over time, but incorporating observed fluctuations in total abundance. We refer to these dynamics as "abundance-driven" dynamics. 
 
 ## Long-term trends
 
-For each route, we evaluated the 30-year trend in biomass (or energy use) and compared this to the trend derived from the null model using generalized linear models with a Gamma family and log link (appropriate for strictly-positive data such as biomass or total metabolic flux). We fit four models to characterize 1) the trend in biomass (or energy use) over time and 2) whether this trend deviates from the trend expected given only changes in abundance:
+For each route, we evaluated the 30-year trend in biomass (or energy use) and compared this to the trend derived from the "abundance-driven" null model using generalized linear models with a Gamma family and log link (appropriate for strictly-positive response variables such as biomass or total metabolic flux). We fit four models to characterize 1) the trend in biomass (or energy use) over time and 2) whether this trend deviates from the trend expected given only changes in abundance:
 
 1. `biomass ~ year * source`, in which "source" refers to being either the "observed" or "abundance-driven" value. This model fits a slope and intercept for the observed trend in  biomass (or energy use) over time, and a separate slope and intercept for the trend drawn from the abundance-driven, or null model, dynamics.
 2. `biomass ~ year + source`. This model fits a separate intercept, but not slope, for the abundance-driven and observed dynamics.
@@ -57,7 +61,7 @@ For each route's best-fitting model, we extracted the predicted values for the f
 
 ## Relating change in community structure to decoupling between abundance and size-based dynamics
 
-Community dissimilarity metrics make the most sense when making pairwise comparisons. We compared the first and last  five-year intervals in each timeseries, resulting in a "begin" and "end" comparison separated by a consistent window of time across routes (19-20 years). The use of five-year periods corrects for sampling effects (@white2004a), smooths out interannual variability, and, by including a relatively large proportion (1/3) of the total timeseries, should reduce the impact of the scenario where the start and end values do not align with the long-term trend. 
+Community dissimilarity metrics make the most sense when making pairwise comparisons. We compared the first and last  five-year intervals in each timeseries, resulting in a "begin" and "end" comparison separated by a consistent window of time across routes (19-20 years). The use of five-year periods corrects for sampling effects (@white2004a), smooths out interannual variability, and, by including a relatively large proportion (1/3) of the total timeseries, partially mitigates the impact of scenarios where the start and end values do not align with the long-term trend. 
 
 Metrics: 
 
