--- a/writing/sections/figures_and_tables.Rmd
+++ b/writing/sections/figures_and_tables.Rmd
@@ -288,49 +288,49 @@ Table of the number and proportion of routes whose dynamics for total biomass an
 
 For 31-32% of routes, models with trends do not outperform simple intercept-only models. For the remaining routes, in most instances, the dynamics of biomass and energy use exhibit a temporal trend, but with no detectable difference in the temporal trends for abundance-driven and observed dynamics. However, for a substantial minority of routes (20% overall for biomass, or 30% of routes with a temporal trend; 7% overall for energy use, or 10% of routes with a temporal trend), there is a detectable deviation between the trends expected due only to changes in abundance and the observed dynamics. 
 
-<!-- ### Table 2. -->
+### Table 2.
 
 
-<!-- ```{r} -->
+```{r}
 
-<!-- slope_winning_fits <- filter(winning_fits_both, modelcomplexity > 1) %>% -->
-<!--   mutate(abundance_driven_increase = ratio_sim > 1, -->
-<!--          observed_increase = ratio_real > 1)  -->
+slope_winning_fits <- filter(winning_fits_both, modelcomplexity > 1) %>%
+  mutate(abundance_driven_increase = ratio_sim > 1,
+         observed_increase = ratio_real > 1)
 
-<!-- slope_winning_fits_summary <- slope_winning_fits %>% -->
-<!--   group_by(currency) %>% -->
-<!--   summarize(n_with_slope = dplyr::n(), -->
-<!--             n_abundance_increase = sum(abundance_driven_increase), -->
-<!--             n_observed_increase = sum(observed_increase), -->
-<!--             prop_abundance_increase = round(mean(abundance_driven_increase), digits = 2), -->
-<!--             prop_observed_increase = round(mean(observed_increase), digits = 2)) -->
+slope_winning_fits_summary <- slope_winning_fits %>%
+  group_by(currency) %>%
+  summarize(n_with_slope = dplyr::n(),
+            n_abundance_increase = sum(abundance_driven_increase),
+            n_observed_increase = sum(observed_increase),
+            prop_abundance_increase = round(mean(abundance_driven_increase), digits = 2),
+            prop_observed_increase = round(mean(observed_increase), digits = 2))
 
-<!-- slope_winning_fits_pretty <- slope_winning_fits_summary %>% -->
-<!--   mutate(currency = ifelse(currency == "biomass", "Total biomass", "Total metabolic flux")) %>% -->
-<!--   select(currency,  -->
-<!--          # n_abundance_increase, -->
-<!--          # n_observed_increase,  -->
-<!--          prop_abundance_increase,  -->
-<!--          prop_observed_increase,  -->
-<!--          n_with_slope) %>% -->
-<!--   rename(Currency = currency, -->
-<!--          # `Number of routes with abundance-driven increase`= n_abundance_increase, -->
-<!--          # `Number of routes with observed increase`  = n_observed_increase, -->
-<!--          `Proportion of increasing abundance-driven trends` = prop_abundance_increase, -->
-<!--          `Proportion of increasing observed trends` = prop_observed_increase, -->
-<!--          `Number of routes with temporal trends` = n_with_slope) -->
+slope_winning_fits_pretty <- slope_winning_fits_summary %>%
+  mutate(currency = ifelse(currency == "biomass", "Total biomass", "Total metabolic flux")) %>%
+  select(currency,
+         # n_abundance_increase,
+         # n_observed_increase,
+         prop_abundance_increase,
+         prop_observed_increase,
+         n_with_slope) %>%
+  rename(Currency = currency,
+         # `Number of routes with abundance-driven increase`= n_abundance_increase,
+         # `Number of routes with observed increase`  = n_observed_increase,
+         `Proportion of increasing abundance-driven trends` = prop_abundance_increase,
+         `Proportion of increasing observed trends` = prop_observed_increase,
+         `Number of routes with temporal trends` = n_with_slope)
 
-<!-- slope_winning_fits_pretty -->
+slope_winning_fits_pretty
 
-<!-- ``` -->
+```
 
-<!-- #### Table 2. Direction of temporal trends in abundance-driven and observed dynamics. -->
+#### Table 2. Direction of temporal trends in abundance-driven and observed dynamics.
 
-<!-- Restricted to the routes exhibiting temporal trends in total biomass and total metabolic flux, the proportion of trends that are increasing (specifically, the ratio of the last fitted value to the first fitted value > 1) for abundance-driven and observed dynamics. Trends that are not increasing are decreasing.  -->
+Restricted to the routes exhibiting temporal trends in total biomass and total metabolic flux, the proportion of trends that are increasing (specifically, the ratio of the last fitted value to the first fitted value > 1) for abundance-driven and observed dynamics. Trends that are not increasing are decreasing.
 
-<!-- Trends in abundance-driven dynamics are dominated by *declines* (67% of routes for total biomass, and 70% of routes for total energy). Observed dynamics for biomass differ qualitatively from the abundance-driven dynamics; observed trends in biomass are evenly divided between increases and decreases (49% increasing). Observed trends in energy use more closely mirror abundance-driven trends (65% declines).  -->
+Trends in abundance-driven dynamics are dominated by *declines* (67% of routes for total biomass, and 70% of routes for total energy). Observed dynamics for biomass differ qualitatively from the abundance-driven dynamics; observed trends in biomass are evenly divided between increases and decreases (49% increasing). Observed trends in energy use more closely mirror abundance-driven trends (65% declines).
 
-<!-- I think Table 2 can be removed/folded into the legend of Figure 2. -->
+I think Table 2 can be removed/folded into the legend of Figure 2.
 
 \newpage
 
