--- a/writing/sections/introduction.Rmd
+++ b/writing/sections/introduction.Rmd
@@ -1,8 +1,8 @@
 ---
 output:
-  # word_document:
-  #   reference_docx: default_gdoc.docx
-  #   df_print: kable
+  word_document:
+    reference_docx: different_gdoc.docx
+    df_print: kable
   # html_document:
   #   df_print: kable
   pdf_document: 
