--- a/writing/sections/methods.Rmd
+++ b/writing/sections/methods.Rmd
@@ -30,7 +30,7 @@ theme_set(theme_bw())
 
 ## Bird abundance data
 
-We used data from the Breeding Bird Survey [@sauer2013] to evaluate trends in abundance, biomass, and energy use. BBS (BBS methods background). We explored trends in abundance, biomass, and energy use over the 30-year time period from 1989-2018. We selected these years to provide a temporal window sufficient to detect trends (@cusser2020), while allowing for a substantial number of routes. To avoid irregularities caused by missing time steps, we restricted the main analysis to routes that had been in at least 27 of 30 years in this window (n = 739), and compared these results to a more strict selection of routes that were sampled in every year (n = 199). We take the route to be the "community" scale [@thibault2011; others]. We filtered the data to remove taxa that are poorly sampled through these methods, following (literally everyone). We accessed the data, and performed this preliminary cleaning and filtering, using the R package `MATSS` [@ye2020]. 
+We used data from the Breeding Bird Survey [@pardieck2019] to evaluate trends in abundance, biomass, and energy use. The Breeding Bird Survey consists of roughly 40km-long survey routes distributed throughout the United States and Canada. Routes are surveyed annually during the breeding season (predominately May-June), via 50 3-minute point counts during which all birds seen or heard are identified to species [@pardieck2019]. Sampling began in 1966, and routes have been added over time to a current total of roughly 3000 routes (@pardieck2019) We explored trends in abundance, biomass, and energy use over the 30-year time period from 1989-2018. We selected these years to provide a temporal window sufficient to detect trends (@cusser2020), while allowing for a substantial number of routes. To avoid irregularities caused by missing time steps, we restricted the main analysis to routes that had been sampled in at least 27 of 30 years in this window (n = 739), and compared these results to a more strict selection of routes that were sampled in every year (n = 199). We take the route to be the "community" scale [@thibault2011]. We filtered the data to remove taxa that are poorly sampled through these methods, following @harris2018. We accessed the data, and performed this preliminary cleaning and filtering, using the R package `MATSS` [@ye2020]. 
 
 ##  Estimated size data
 
@@ -61,7 +61,7 @@ For each route's best-fitting model, we extracted the predicted values for the f
 
 ## Relating change in community structure to decoupling between abundance and size-based dynamics
 
-Community dissimilarity metrics make the most sense when making pairwise comparisons. We compared the first and last  five-year intervals in each timeseries, resulting in a "begin" and "end" comparison separated by a consistent window of time across routes (19-20 years). The use of five-year periods corrects for sampling effects (@white2004a), smooths out interannual variability, and, by including a relatively large proportion (1/3) of the total timeseries, partially mitigates the impact of scenarios where the start and end values do not align with the long-term trend. 
+Community dissimilarity metrics are most interpretable when making pairwise comparisons (as opposed to repeated compasions over a timeseries). We compared the first and last five-year intervals in each timeseries, resulting in a "begin" and "end" comparison separated by a consistent window of time across routes (19-20 years). The use of five-year periods corrects for sampling effects (@white2004a), smooths out interannual variability, and, by including a relatively large proportion (1/3) of the total timeseries, partially mitigates the impact of scenarios where the start and end values do not align with the long-term trend. 
 
 We calculated three metrics to explore how changes in community composition and size structure translate into decoupling between abundance-driven and observed dynamics for biomass and energy use.  First, we evaluated the change in average community-wide body size, calculated as the log ratio of mean body size in the last five years relative to the mean body size in the first five years:
 
@@ -69,15 +69,10 @@ $log(\frac{\bar{m}_{last5}}{\bar{m}_{first5}})$
 
 where $\bar{m}_{last5}$ is the mean body size of all individuals observed in the last 5 timesteps. Large changes in average body size are, by definition, expected to translate into decoupling between observed and abundance-driven dynamics.
 
-Second, we calculated measures of turnover in the size structure and in species composition. We calculated turnover in the ISD following an overlap measure that has previously been applied to species body size distributions in mammalian communities (@read2018). First 
+Second, we calculated measures of turnover in the size structure and in species composition. We calculated turnover in the ISD following an overlap measure that has previously been applied to species body size distributions in mammalian communities (@read2018). We characterized each "begin" or "end" ISD as a smooth probability density function by fitting a Gaussian mixture model (with up to 15 Gaussians) to the raw, and extracting the fitted probability density at each possible body mass ranging from 0 to exp(15) g (following @thibault2010). We rescaled each density function to sum to 1. To calculate the degree of turnover between two ISDs, we calculated the area of overlap between the two density smooths and subtracted this quantity from 1. To evaluate turnover in species composition between the five-year time periods, we calculated Bray-Curtis dissimilarity between the two communities using the R package `vegan`. 
 
-ISD turnover (say turnover rather than overlap) by fitting GMMs (following Thibault), turning into scaled density functions, and calculating the area of overlap (following Read). Turnover is 1-overlap.
+We tested whether routes whose dynamics were best-described using different syndromes of change (no trend, couple trends, or decoupled trends) differed in 1) the magnitude of change in mean body size; 2) turnover in the ISD over time; or 3) species compositional turnover over time. For change in mean body size, we fit an ordinary linear model of the form `abs(log ratio (mean body size)) ~ best fitting model type`. We used the absolute log ratio so as to focus on the magnitude, rather than the direction, of change in body size. We compared this model to an intercept-only null model of the form `abs(log ratio(mean body size)) ~ 1`. Because our metrics for turnover in the ISD and species composition are bounded from 0-1, we analyzed these metrics using binomial generalized linear models of the form `ISD turnover ~ best fitting model type` and `dissimilarity ~ best fitting model type`, and again compared these models to intercept-only null models. In instances where the model fit with `best fitting model type` outperformed the intercept-only model, we calculated model estimates and contrasts using the R package `emmeans`. 
 
-BCD to measure species turnover. Compare species composition in the first five years to the last five years. 
-
-Statistical comparison:
-
-For mean body size, use the absolute log ratio because this will capture the *magnitude* of change. Fit an ordinary linear model. For turnover metrics, fit binomial GLM (because bounded 0-1). Compare fit of model fit to model_type to an intercept only model. Explore contrasts using emmeans. 
 
 \newpage
 # References
