--- a/writing/sections/discussion.Rmd
+++ b/writing/sections/discussion.Rmd
@@ -20,13 +20,13 @@ Although the dynamics of size- and abundance- based currencies are intrinsically
 
 First, this illustrates that we should extrapolate between currencies with some care. They are intrinsically linked, but changes in size structure can cause scaling relationships between each of the currencies to break down. Shifts in mean per capita body size decouple biomass from abundance, and different specific size compositions will result in different community-wide scaling between energy use and biomass. 
 
-For routes with a decoupling in the long-term trends of biomass, energy use, and abundance, this decoupling is indicative of a directional shift in the size structure of the community. In the case of BBS, the overwhelmingly most common scenario is of a decline in abundance, but a shift in the size structure favoring larger-bodied species and offsetting or even reversing this decline in abundance. This contrasts with general concerns about larger-bodied species being more vulnerable to declines in abundance or outright extinctions due to anthropogenic changes. However, it is consistent with previous findings from the BBS. Increases in body size may reflect forests in recovery across North America, or the contributions of relatively few, large-bodied species that may in fact benefit from recent ecological changes. 
+For routes with a decoupling in the long-term trends of biomass, energy use, and abundance, this decoupling is indicative of a directional shift in the size structure of the community. In the case of BBS, the overwhelmingly most common scenario is of a decline in abundance, but a shift in the size structure favoring larger-bodied species and offsetting or even reversing this decline in abundance. This contrasts with general concerns about larger-bodied species being more vulnerable to declines in abundance or outright extinctions due to anthropogenic changes. However, it is consistent with previous findings from the BBS [@schipper2016]. Increases in body size may reflect forests in recovery across North America, or the contributions of relatively few, large-bodied species that may in fact benefit from recent ecological changes. 
 
 ## How changes in the ISD contribute to decoupling
 
 While an overall decoupling of the long-term trends for biomass, abundance, and energy use is symptomatic of a pronounced shift in the size structure, the absence of such a decoupling does not imply that the size structure has remained unchanged over time. Rather, the amount of turnover in the size structure over time is comparable for routes that do and do not exhibit long-term decoupling. Importantly, these size shifts may *also* reflect significant functional changes to the community, and should not be ignored simply because they have no overall or consistent effect on the long-term temporal trends.
 
-We should also not discount the possibility that either random population dynamics, or systematic, but non-*size*-structured, dynamics, contribute to changes in both the size structure and in the relationship between biomass, energy use, and abundance over time. At a macroecological scale, null modeling approaches inspired by the study of functional and taxonomic beta diversity may be useful in this space. However, these models are known to suffer from the "Narcissus effect" and to be highly sensitive to the information used to constrain the model, resulting in a high type-I error rate and reduced inferential power. It may, therefore, be most informative to focus instead on the dynamics of particular systems and attempt to understand the interlinked dynamics of shifts in species composition, size structure, abundance, biomass, and energy use from a perspective grounded in empiricism and natural history. 
+Finally, we should acknowledge possibility that either random population dynamics, or systematic, but non-*size*-structured, dynamics, contribute to changes in both the size structure and in the relationship between biomass, energy use, and abundance over time. At a macroecological scale, null modeling approaches inspired by the study of functional and taxonomic beta diversity may help address this question [@swenson2011; @stegen2013]. However, these models are known to suffer from the "Narcissus effect" and to be highly sensitive to the information used to constrain the model, resulting in a high type-I error rate and reduced inferential power [@ulrich2017]. It may, therefore, be most informative to focus instead on the dynamics of particular systems and attempt to understand the interlinked dynamics of shifts in species composition, size structure, abundance, biomass, and energy use from a perspective grounded in empiricism and natural history. 
 
 ## Extensions to capture nonlinear dynamics
 
