--- a/writing/sections/results.Rmd
+++ b/writing/sections/results.Rmd
@@ -15,9 +15,9 @@ bibliography: refs.bib
 
 This analysis revealed evidence of qualitatively different continent-level patterns in the dynamics of biomass, energy, and abundance. Of the 739 routes in this analysis, approximately 70% (500/739 for biomass, and 509/739 for energy use) were best-described using a model incorporating a temporal trend in abundance and/or biomass or energy use. For biomass, these temporal trends were evenly balanced between increases and decreases (256 decreasing trends, and 244 increasing trends). For energy use, there was a much greater representation of decreasing trends (329 decreasing trends and 180 increasing trends). Trends driven by abundance, as reflected by the "null" dynamics, were strongly dominated by declines (335 decreases and 165 increases for abundance-driven dynamics in biomass, and 355 decreases and 154 increases for abundance-driven dynamics in energy use). 
 
-These divergent aggregate outcomes in abundance, energy use, and especially biomass occurred due to decoupling in the long-term trends for these different currencies. For a substantial minority of routes (20% of all routes for biomass, and 7% of all routes for energy use), the best-fitting model fit a different long-term trend for biomass or energy use than for the "null", abundance-driven, trend. When this decoupling occurred, it was overwhelmingly dominated by scenarios in which the slope for abundance-driven dynamics was more negative than that for biomass or energy use (*get numbers*). 
+These divergent aggregate outcomes in abundance, energy use, and especially biomass occurred due to decoupling in the long-term trends for these different currencies. For a substantial minority of routes (20% of all routes for biomass, and 7% of all routes for energy use), the best-fitting model fit a different long-term trend for biomass or energy use than for the "null", abundance-driven, trend. When this decoupling occurred, it was overwhelmingly dominated by scenarios in which the slope for abundance-driven dynamics was more negative than that for biomass or energy use (*get numbers here, I'm tired and will do it wrong if I do it now*). 
 
-Decoupling between the long-term trajectories of abundance and energy use or biomass is, by definition, indicative of some degree of change in the ISD over time. However, there was not a detectable difference in the degree of turnover in the ISD compared between routes that exhibited different dynamics (i.e. no linear temporal trend, a consistent temporal trend for abundance and biomass or energy use, or differing trends for abundance and biomass or energy use).
+Decoupling between the long-term trajectories of abundance and energy use or biomass is, by definition, indicative of some degree of change in the ISD over time. Routes whose dynamics were best-described as decoupled trends over time had a higher absolute log ratio of mean mass (i.e. greater magnitude of chagne, either increasing or decreasing, in mean mass over time) than routes with coupled or no trends. However, there was not a detectable difference in the degree of temporal turnover in the ISD or species composition compared between routes that exhibited different dynamics (i.e. no linear temporal trend, a consistent temporal trend for abundance and biomass or energy use, or differing trends for abundance and biomass or energy use).
 
 
 \newpage
